# news_gpt_v2

./: .env.template  .gitignore  DEEPSEARCH_GUIDE.md  PROJECT_REPORT.md  README.md  README_NEW_WORKFLOW.md  USAGE_GUIDE.md  admin.html  analysis.html  analysis_backup.html  check_indexes.py  check_search_data.py  check_weekly_api.py  debug_deepsearch.py  deepsearch_config.md  design.md  error_history.md  error_logger.py  index.html  index_backup.html  index_backup_original.html  index_clean.html  index_new.html  keyword_aggregation.py  main.py  main_fixed.py  main_old_backup.py  news-detail.html  pyproject.toml  recreate_index.py  requirements.md  requirements.txt  run_analysis.py  run_analysis_deepsearch.py  run_proper_analysis.py  run_system_python.ps1  setup.bat  setup.py  setup_and_run.ps1  start_deepsearch_server.bat  (+9 more)
api/: api_router.py
api/v1/: api_v1_router.py
api/v1/endpoints/: analysis.py  chat.py  keywords.py  subscription.py
backup/: index_backup_current.html  index_backup_original.html
cache_data/: domestic_2025-07-07_2025-07-13.json  domestic_2025-07-14_2025-07-20.json  global_2025-07-07_2025-07-13.json  global_2025-07-14_2025-07-20.json  google_trending_keywords.json
core/: config.py  schemas.py
docs/: README.md  README_original.md  design.md  design_optimized.md  design_original.md  requirements.md  task.md  task_backup.md  task_original.md
guide/: README.md  design.md
reference/: index (1).html  main.py
services/: deepsearch_service.py  email_service.py  openai_service.py  sample_service.py  trending_service.py
utils/: helpers.py
venv_new/: pyvenv.cfg
venv_new/Scripts/: activate  activate.bat
